# DPGMagicTag

./: README.md  pyproject.toml
src/dpgmagictag/: bases.py  context.py  magictag.py  path.py
tests/: test_context.py  test_magictag.py  test_path.py
