[project]
name = "dpgmagictag"
version = "0.1.0"
description = "A composable tag system useable with DearPyGUI"
readme = "README.md"
authors = [
    { name = "Zachary Parmley", email = "zachary.parmley@local" }
]
requires-python = ">=3.10"
dependencies = [
    "dearpygui>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
